Add configurable default UDP address
